# tracesurgeon

./: .gitignore  2026-06-24-023944-local-command-caveatcaveat-the-messages-below.txt  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DESIGN.md  PROOF.md
examples/: quickstart.py
tests/: run_all.py  test_agent.py  test_branching_agent.py  test_complex_live.py  test_counterfactual.py  test_dag.py  test_detection.py  test_edge_cases.py  test_error_corpus.py  test_polish.py  test_production.py  test_react_loop.py  test_real_agent.py  test_real_agent_live.py  test_scorer.py
tracesurgeon/: __init__.py  _console.py  api.py  cli.py  counterfactual.py  dag.py  interceptor.py  report.py  scorer.py  trace.py
