[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracesurgeon"
version = "0.1.0"
description = "Causal, dependency-aware root-cause debugging for LangGraph agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abhishek" }]
keywords = ["langgraph", "langchain", "agents", "debugging", "observability", "attribution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]
dependencies = [
    # pinned to the validated range. LangGraph 1.3 turns create_react_agent into a
    # hard error (moved to langchain.agents.create_agent) and changes tracing —
    # these bounds keep installs deterministic against the API this targets.
    "langgraph>=1.2,<1.3",
    "langchain>=1.3,<2",
    "langchain-core>=1.4,<2",
    "networkx>=3.3",
    "rich>=13.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.2.0"]
openai = ["langchain-openai>=0.2.0"]       # also covers OpenRouter (OpenAI-compatible)
gemini = ["langchain-google-genai>=2.0.0"]
dev = ["pytest>=8.0"]

[project.scripts]
tracesurgeon = "tracesurgeon.cli:main"

[project.urls]
Homepage = "https://github.com/ahhbhishek/tracesurgeon"
Repository = "https://github.com/ahhbhishek/tracesurgeon"
Issues = "https://github.com/ahhbhishek/tracesurgeon/issues"

[tool.setuptools.packages.find]
include = ["tracesurgeon*"]
